<resources>
    <string name="app_name">Rember</string>
    <string name="title_home">Home</string>
    <string name="title_settings">Settings</string>
    <string name="title_add_reminder">Add Reminder</string>
    <string name="title_contacts">Contacts</string>
    <string name="title_reminders">Reminders</string>
    <string name="button_back">Back</string>
    <string name="app_welcome">Welcome</string>
    <string name="button_next">Next</string>
    <string name="button_next_step">Next Step</string>
    <string name="button_sendCode">Send Code</string>
    <string name="text_title">Title</string>
    <string name="text_your_reminders">Personal Reminders</string>
    <string name="text_switch1">Remind yourself?</string>
    <string name="text_others_reminders">Reminders from Contacts</string>
    <string name="text_description">Description</string>
    <string name="text_pick_date">Pick Date</string>
    <string name="text_pick_time">Pick Time</string>
    <string name="setting1">General</string>
    <string name="text_to">To: </string>
    <string name="text_create">Create</string>
    <string name="setting2">Theme</string>
    <string name="setting3">Notifications</string>
    <string name="setting4">Change Number</string>
    <string name="setting5">About</string>
    <string name="registerInfo">You will receive a verification code on your phone.</string>
    <string name="numberExample">ex. 0730123456</string>
    <string name="register_ongoing">Cannot send another code. Please, try again later.</string>
    <string name="register">Register</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_create_rem1">CreateRem1Activity</string>
</resources>
