<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:id="@+id/ConstLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="SettingsActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/roboto_thin"
        android:text="@string/title_settings"
        android:textAlignment="center"
        android:textColor="@color/remberWhite"
        android:textSize="35sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <include
        android:id="@+id/navigation"
        layout="@layout/activity_base"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="280dp"
        android:layout_height="400dp"
        android:layout_marginEnd="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/navigation"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/general"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:height="45dp"
            android:fontFamily="@font/roboto_thin"
            android:text="@string/setting1"
            android:clickable="true"
            android:onClick="click"
            android:textSize="25sp" />

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/remberBlue" />

        <TextView
            android:id="@+id/theme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:height="45dp"
            android:fontFamily="@font/roboto_thin"
            android:text="@string/setting2"
            android:textSize="25sp" />

        <View
            android:id="@+id/view2"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/remberBlue" />

        <TextView
            android:id="@+id/notifications"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:height="45dp"
            android:fontFamily="@font/roboto_thin"
            android:text="@string/setting3"
            android:textSize="25sp" />

        <View
            android:id="@+id/view3"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/remberBlue" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:height="45dp"
            android:fontFamily="@font/roboto_thin"
            android:text="@string/setting4"
            android:textSize="25sp" />

        <View
            android:id="@+id/view4"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/remberBlue" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:height="45dp"
            android:fontFamily="@font/roboto_thin"
            android:text="@string/setting5"
            android:textSize="25sp" />

        <View
            android:id="@+id/view5"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/remberBlue" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="83dp"
        android:layout_height="399dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.027"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.675">

    </LinearLayout>


</android.support.constraint.ConstraintLayout>